# julius-tui

./: .gitignore  DECISIONS.md  DOGFOOD.md  Makefile  README.md  julius.py  pyproject.toml
julius_tui/: __init__.py  app.py  screens.py  sim.py  tiles.py  tui.tcss
screenshots/: README.md  gameplay.tcell  hero.tcell
tests/: perf.py  playtest.py  qa.py
